# dashcam-rs

./: .gdbinit  Cargo.toml  Embed.toml  LICENSE  README.md  build.rs  memory.x  openocd.cfg
.cargo/: config
doc/: dashcam_design.md  dashcam_reqs.md  learning_rust.md
src/: frame_buf.rs  lib.rs  main.rs  nvm.rs  pins.rs  util.rs
src/board/: display.rs  mod.rs  qspi.rs  sdram.rs  stm32f746_disco.rs
src/ov9655/: mod.rs  parallel.rs  pins.rs  sccb.rs
