[package]
name = "dashcam-rs"
version = "0.1.0"
authors = ["Ben Brown <bbrown1867@gmail.com>"]
edition = "2018"

[dependencies]
# Device support
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"

# Runtime support
heapless = "0.5.5"
embedded-graphics = "0.6.1"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }

# HAL
embedded-hal = "0.2.3"
stm32-fmc = "0.1.2"

[dependencies.stm32f7xx-hal]
git = "https://github.com/richardeoin/stm32f7xx-hal/"
branch = "fmc1"
features = ["rt", "fmc", "stm32f746"]
