[package]
name = "dashcam-rs"
version = "0.1.0"
authors = ["Ben Brown <bbrown1867@gmail.com>"]
edition = "2018"

[dependencies]
# Device support
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"

# Runtime support
heapless = "0.5.5"
cortex-m-rtic = "0.5.5"
embedded-graphics = "0.6.1"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }

# HAL
embedded-hal = "0.2.3"

# Use my fork in order to have the new SDRAM chip implementation
[dependencies.stm32-fmc]
git = "https://github.com/bbrown1867/stm32-fmc"
branch = "0.1.2_add-chip"
features = ["sdram"]

# Have to fork the HAL in order to point to the forked version of stm32-fmc
[dependencies.stm32f7xx-hal]
git = "https://github.com/bbrown1867/stm32f7xx-hal"
branch = "fmc"
features = ["rt", "fmc", "stm32f746"]
