[package]
name = "dashcam-rs"
version = "0.2.0"
authors = ["Ben Brown <bbrown1867@gmail.com>"]
edition = "2018"

[dependencies]
# Device support
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"

# Runtime support
heapless = "0.5.5"
cortex-m-rtic = "0.5.5"
embedded-graphics = "0.6.1"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }

# HAL
embedded-hal = "0.2.3"
stm32-fmc = { version = "0.2.0", features = ["sdram"] }

# TODO: Use version 0.3.0 when it happens, update commit hash as needed
[dependencies.stm32f7xx-hal]
git = "https://github.com/stm32-rs/stm32f7xx-hal"
rev = "690a898327b27ecd236ae6b8d9ba395eb889bc38"
features = ["rt", "fmc", "stm32f746"]
